<resources>
    <string name="app_name">Aptitude and Verbal Quiz</string>
    <string name="about_info">This Android application consists of aptitude test and verbal ability test. The user is at an advantage here as he can practice a lot through these tests and that too in a time based manner as the tests are to be completed in a given time. At the first launch of the application, all the questions (550) will be stored in SQLite Database and every test gets random questions from the database.</string>
    <string name="home_text">Aptitude and Verbal Ability Quiz</string>
    <string name="home_button_text">Proceed to Test Menu</string>
    <string name="apti">Aptitude Test</string>
    <string name="verbal">Verbal Test</string>
    <string name="prev">Prev</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="summary">Summary</string>
    <string name="apti_menu">Aptitude Test Menu</string>
    <string name="verbal_menu">Verbal Test Menu</string>
    <string name="inst">Test Instructions :</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="start">Start Test</string>
    <string name="about">About</string>
    <string name="test_summ">Here\&apos;s your Test Summary</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="not_attm">Not Attempted</string>
    <string name="attm">Attempted</string>
    <string name="not_view">Not Viewed</string>
    <string name="nav">Click on the Question No. to navigate</string>
    <string name="confirm">Confirm Submit</string>
    <string name="close">Close</string>
    <string name="title_activity_home">Home</string>
    <string name="confirm_ad">Confirm</string>
    <string name="alert_quit">Are you sure you want to quit this app?</string>
    <string name="submit_test">Submitting Test</string>
    <string name="wait">Please Wait&#8230;</string>
    <string name="alert">Alert</string>
    <string name="first_ques">This is the first question! Click Next to view more.</string>
    <string name="sub">Are you sure you want to submit the test?</string>
    <string name="question_placeholder">Question %1$d of %2$d</string>
    <string name="time_placeholder">Time : %1$d : %2$d</string>
    <string name="time_place_sec">Time : %1$d : 0%2$d</string>
    <string name="para_placeholder">Paragraph:\n%1$s\n\nQ. %2$s</string>
    <string name="summary_placeholder">Total No. of Questions : 30\nAttempted : %1$d\nNot Attempted : %2$d\nNot Viewed : %3$d</string>
    <string name="result_placeholder">Correct : %1$d\nInCorrect %2$d\nNot Attempted : %3$d</string>
    <string name="score">Score : %1$f%%\n%2$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="aptitude">Aptitude</string>
    <string name="verb">Verbal</string>
    <string name="share">Share</string>
    <string name="rate">Rate us on Play Store</string>
    <string name="ques">Question :</string>
    <string name="yourAns">Your Answer :</string>
    <string name="corAns">Correct Answer :</string>
    <string name="result">Result</string>
    <string name="question">Question</string>
</resources>
