<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/gp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/apti"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/aptitude" />
        <item
            android:id="@+id/verb"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/verb" />

    </group>

    <group
        android:id="@+id/gp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/rate" />
    </group>


</menu>