<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg"
    android:padding="@dimen/activity_horizontal_margin">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/elevation"
        app:cardBackgroundColor="@android:color/white"
        >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_text"
        android:textSize="@dimen/home_text_size"
        android:textColor="@android:color/black"/>
    </android.support.v7.widget.CardView>



        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:text="@string/home_button_text"
            android:textSize="@dimen/home_text_but"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/about"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_centerHorizontal="true"
            app:bootstrapBrand="info"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true"/>

</RelativeLayout>