<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/upperHalf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/pad_8"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/elevation">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/test_summ"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_8"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/elevation">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_4"
                android:gravity="center"
                android:maxLines="4"
                android:padding="@dimen/pad_2"
                android:scrollbars="vertical"
                android:text="@string/nav" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/pad_8"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/elevation">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_2"
                android:layout_marginRight="@dimen/pad_2"
                android:gravity="center"
                android:padding="@dimen/pad_2"
                android:text=""
                android:textColor="@android:color/black" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_8"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/elevation"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minLines="4"
                android:padding="@dimen/pad_2" />

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/summary_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/belowHalf"
        android:layout_below="@id/upperHalf"></FrameLayout>

    <LinearLayout
        android:id="@+id/belowHalf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/pad_8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/pad_4"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="@dimen/elevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/pad_2"
                    android:text="@string/attm"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/text_size" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_4"
                android:layout_marginRight="@dimen/pad_4"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="@dimen/elevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/pad_2"
                    android:text="@string/not_attm"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/text_size" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_4"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="@dimen/elevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/pad_2"
                    android:text="@string/not_view"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/text_size" />
            </android.support.v7.widget.CardView>
        </LinearLayout>


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/pad_8"
            android:text="@string/confirm"
            android:textAllCaps="true"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />
    </LinearLayout>
</RelativeLayout>