<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <include
        layout="@layout/layout_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomHalf"
        android:layout_below="@+id/topHalf"
        android:layout_marginBottom="@dimen/pad_8"
        android:layout_marginTop="@dimen/pad_8" />

    <LinearLayout
        android:id="@+id/topHalf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/elevation"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/verbal"
                android:textColor="@android:color/black"
                android:textSize="@dimen/home_text_size" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/elevation"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/pad_4">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/bottomHalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/pad_4">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="@dimen/pad_6"
            android:text="@string/prev"
            android:textAllCaps="true"
            app:bootstrapBrand="primary"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_6"
            android:layout_marginRight="@dimen/pad_6"
            android:layout_toLeftOf="@+id/button2"
            android:layout_toRightOf="@+id/button1"
            android:text="@string/summary"
            android:textAllCaps="true"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/pad_6"
            android:text="@string/next"
            android:textAllCaps="true"
            app:bootstrapBrand="warning"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

    </RelativeLayout>
</RelativeLayout>