<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/bg">

    <LinearLayout
        android:id="@+id/upperHalf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/pad_8">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/elevation">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/test_summ"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_8"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/elevation">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/pad_4"
                android:minLines="3"
                android:maxLines="3"
                android:padding="@dimen/pad_2"
                android:scrollbars="vertical"
                android:text="" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_8"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="@dimen/elevation">

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minLines="2"
                android:padding="@dimen/pad_2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </android.support.v7.widget.CardView>

</LinearLayout>


    <FrameLayout
        android:id="@+id/result_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upperHalf"
        android:layout_above="@+id/bottomHalf"/>
        <LinearLayout
            android:id="@+id/bottomHalf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_8"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">


            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/pad_4"
                android:layout_weight="1"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="@dimen/elevation">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/pad_2"
                    android:text="@string/correct"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/text_size" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_4"
                android:layout_marginRight="@dimen/pad_4"
                android:layout_weight="1"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="@dimen/elevation">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/pad_2"
                    android:text="@string/incorrect"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/text_size" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_4"
                android:layout_weight="1"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="@dimen/elevation">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/pad_2"
                    android:text="@string/not_attm"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/text_size" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

</RelativeLayout>